- 更改配置 - 添加分类 - 修复travis错误

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Sth4nothing
 name: sth4nothing
 description: Welcome to my space!
 
-github: https://github.com/sth4nothing/sth4nothing.github.io
+github: https://github.com/sth4nothing
 rss: false
 
 plugins:
