--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: ruby
 rvm: 2.5
 
 before_install:
-- apt install zlib1g zlib1g-dev
-- apt install ruby-dev
+- sudo apt install zlib1g zlib1g-dev
+- sudo apt install ruby-dev
 
 install: ./script/bootstrap
 script: ./script/cibuild
